--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "music-beat-detector",
   "version": "1.0.0",
-  "main": "src/MusicBeatDetector.js",
+  "main": "index.js",
   "repository": "https://github.com/chrvadala/music-beat-detector.git",
   "author": "chr.vadala",
   "license": "MIT",
   "devDependencies": {
+    "carlo": "^0.9.20",
     "lame": "^1.2.4",
     "speaker": "^0.4.1",
     "standard": "^12.0.1"
